2018-09-16 v0.4.4
  - Fix example and docs.

2018-09-01 v0.4.3
  - Fixed failed processing.

2018-09-01 v0.4.2
  - Error logging.

2018-09-01 v0.4.1
  - Fix processing of failed messages.
  - Fix ACK of failed to decode messages.

2018-09-01 v0.4.0
  - Mark as failed on prepare stage.

2018-09-01 v0.3.0
  - Change version numbering.
  - Renew vendoring.
  - Better logging.

2018-07-25 0.2
  - Fix status healthcheck.

2018-07-24 0.1
  - First release.