@@ -31,7 +31,7 @@
 
 [[constraint]]
   name = "git.aqq.me/go/nanachi"
-  version = "1.10.0"
+  version = "1.10.2"
 
 [[constraint]]
   name = "git.aqq.me/go/retrier"
