@@ -1,5 +1,6 @@
 2018-09-16 v0.4.4
   - Fix example and docs.
+  - Update nanachi.
 
 2018-09-01 v0.4.3
   - Fixed failed processing.
